--- a/index.html
+++ b/index.html
@@ -15,8 +15,97 @@
 </head>
 
 <body>
+    <!-- Header  -->
+    <header class="container-fluid bg-primary">
+        <h1>Shopping Cart By JS</h1>
+    </header>
 
+    <!-- Main Section  -->
+    <main>
+        <div class="product-cart-container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="products">
+                        <div class="row g-4">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shoe</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shoe</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shoe</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shoe</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shoe</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Shoe</h5>
+                                        <p class="card-text">This is a longer card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="cart">
+                        Cart will comming soon...
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
 
     <!-- Script  -->
     <script src="main.js"></script>
