fix style for products

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 
 <body>
     <!-- Header  -->
-    <header class="container-fluid bg-primary">
-        <h1>Shopping Cart By JS</h1>
+    <header class="container-fluid bg-primary p-3 mb-3">
+        <h1 class="text-white text-center">Shopping Cart By JS</h1>
     </header>
 
     <!-- Main Section  -->
     <main>
-        <div class="product-cart-container">
+        <div class="product-cart-container p-4">
             <div class="row">
-                <div class="col-6">
+
+                <!-- products -->
+                <div class="col-8">
                     <div class="products">
                         <div class="row g-4">
-                            <div class="col-6 col-md-6 col-lg-3">
+                            <div class="col-12 col-md-12 col-lg-6">
                                 <div class="card">
                                     <img src="product1.jpg" class="card-img-top" alt="product-1">
                                     <div class="card-body">
@@ -38,7 +40,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-md-6 col-lg-3">
+                            <div class="col-12 col-md-12 col-lg-6">
                                 <div class="card">
                                     <img src="product1.jpg" class="card-img-top" alt="product-1">
                                     <div class="card-body">
@@ -49,7 +51,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-md-6 col-lg-3">
+                            <div class="col-12 col-md-12 col-lg-6">
                                 <div class="card">
                                     <img src="product1.jpg" class="card-img-top" alt="product-1">
                                     <div class="card-body">
@@ -60,7 +62,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-md-6 col-lg-3">
+                            <div class="col-12 col-md-12 col-lg-6">
                                 <div class="card">
                                     <img src="product1.jpg" class="card-img-top" alt="product-1">
                                     <div class="card-body">
@@ -71,7 +73,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-md-6 col-lg-3">
+                            <div class="col-12 col-md-12 col-lg-6">
                                 <div class="card">
                                     <img src="product1.jpg" class="card-img-top" alt="product-1">
                                     <div class="card-body">
@@ -82,7 +84,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6 col-md-6 col-lg-3">
+                            <div class="col-12 col-md-12 col-lg-6">
                                 <div class="card">
                                     <img src="product1.jpg" class="card-img-top" alt="product-1">
                                     <div class="card-body">
@@ -97,7 +99,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+
+                <!-- cart  -->
+                <div class="col-4 bg-light vh-100">
                     <div class="cart">
                         Cart will comming soon...
                     </div>
