--- a/index.html
+++ b/index.html
@@ -28,73 +28,8 @@
                 <!-- products -->
                 <div class="col-8">
                     <div class="products">
-                        <div class="row g-4">
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <div class="card">
-                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shoe</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to
-                                            additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <div class="card">
-                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shoe</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to
-                                            additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <div class="card">
-                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shoe</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to
-                                            additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <div class="card">
-                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shoe</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to
-                                            additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <div class="card">
-                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shoe</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to
-                                            additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-12 col-lg-6">
-                                <div class="card">
-                                    <img src="product1.jpg" class="card-img-top" alt="product-1">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Shoe</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural lead-in to
-                                            additional content. This content is a little bit longer.</p>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="row g-4 products-container">
+
 
                         </div>
                     </div>
