add product on clicking button

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
                 </div>
 
                 <!-- cart  -->
-                <div class="col-4 bg-light vh-100">
+                <div class="col-4 bg-light vh-100 p-3 d-flex flex-column justify-contennt-center align-items-center">
+                    <h3 class="mb-4">CART</h3>
                     <div class="cart">
-                        Cart will comming soon...
+                        <div class="row item-container g-4">
+
+                        </div>
                     </div>
                 </div>
             </div>
