add pricing on cart

--- a/index.html
+++ b/index.html
@@ -36,12 +36,18 @@
                 </div>
 
                 <!-- cart  -->
-                <div class="col-4 bg-light vh-100 p-3 d-flex flex-column justify-contennt-center align-items-center">
+                <div class="col-4 bg-light vh-100 p-5 d-flex flex-column justify-contennt-center align-items-center">
                     <h3 class="mb-4">CART</h3>
-                    <div class="cart">
+                    <div class="cart overflow-auto mb-5">
                         <div class="row item-container g-4">
 
                         </div>
+                    </div>
+                    <div class="cost w-50">
+                        <span class="d-block">Price: $ <span id="item-price">0</span></span>
+                        <span>Shipping: $ <span id="shipping">0</span></span>
+                        <hr>
+                        <span>total: $ <span id="total"></span></span>
                     </div>
                 </div>
             </div>
